[gd_scene load_steps=8 format=2]

[ext_resource path="res://start-assets/player.png" type="Texture" id=1]
[ext_resource path="res://Object/Tile.gd" type="Script" id=2]
[ext_resource path="res://start-assets/audio/70.ogg" type="AudioStream" id=3]
[ext_resource path="res://start-assets/audio/88.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.7029, 45.6159 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48.1992, 52.3043 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41.1838, 31.8194 )

[node name="Tile" type="KinematicBody2D"]
position = Vector2( 230.306, 188.523 )
collision_mask = 30
script = ExtResource( 2 )
speed = Vector2( 600, 800 )
gravity = 4000.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.29538 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.634567, 0.0463562 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.267823, -0.726394 )
scale = Vector2( 3.51146, 3.58288 )

[node name="Detectort" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectort"]
modulate = Color( 0.945098, 0.0313726, 0.847059, 1 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 2 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Captured" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PlatformPreventor" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformPreventor"]
shape = SubResource( 3 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Detectort" to="." method="_on_Detectort_area_entered"]
[connection signal="area_exited" from="Detectort" to="." method="_on_Detectort_area_exited"]
[connection signal="body_entered" from="Detectort" to="." method="_on_Detectort_body_entered"]
